# opaque-constraints

./: .travis.yml  README.md  default.nix  nixpkgs.nix  opaque-constraints.cabal  shell.nix
src/Data/Constraint/: Opaque.hs
